--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/checkout@v1
       - uses: icepuma/rust-action@1.67.1
         with:
-          args: cargo test
+          args: CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse cargo test
