--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.69"
 clap = { version = "4.1.6", features = ["derive"] }
 crossbeam-channel = "0.5.6"
 crossterm = "0.26.0"
+home-dir = "0.1.0"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
