--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,15 @@ name: Test
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      - uses: icepuma/rust-action@1.68.0
-        with:
-          args: CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse cargo test
+    - uses: hecrj/setup-rust-action@v1
+      with:
+        rust-version: 1.68.0
+    - uses: actions/checkout@master
+    - name: Run tests
+      env:
+        CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
+      run: cargo test --verbose
